methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:3: error: '<-' expected but ')' found.
  for (i<=1 to 6) {
                ^MethodsReturning:9: error: illegal start of simple expression
}
^